--- a/happyFeetWeb/src/main/resources/SolicitudPodologoAdmin.html
+++ b/happyFeetWeb/src/main/resources/SolicitudPodologoAdmin.html
@@ -22,7 +22,7 @@
 									  </br>
 									  </br>
 										<span>Resumen de la solicitud:</span></br>
-										<table class="detalles">
+										<table class="detalles" border="1">
 										<tr>
 											<th>Rut</th>
 											<th>Nombre</th>
@@ -36,7 +36,7 @@
 											<td style="text-align: center">[rut]</td>
 											<td style="text-align: center">[nombre]</td>
 											<td style="text-align: center">[direccion]</td>
-											<td style="text-align: center">[edad]</td>
+											<td style="text-align: center">[fecha_nacimiento]</td>
 											<td style="text-align: center">[idMinSal]</td>
 											<td style="text-align: center">[telefono]</td>
 											<td style="text-align: center">[email]</td>
